[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neoaccess"
version = "4.4.1"
authors = [
  { name = "Julian West BrainAnnex.org" },
]
maintainers = [
  { email = "julian@brainannex.org" },
]
description = "High-level interface to the Neo4j graph database"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "neo4j==4.4.11",
  "numpy~=1.22.4",
  "pandas~=1.4.3",
]
keywords = [
  "graph database",
  "knowledge graph",
  "neo4j",
]

[project.urls]
Homepage = "https://brainannex.org/guide.php"
"Home-page" = "https://brainannex.org/guide.php"
"Bug Tracker" = "https://github.com/BrainAnnex/brain-annex/issues"
Source = "https://github.com/BrainAnnex/neoaccess"
Documentation = "https://brainannex.org/guide.php"
